--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -146,6 +146,7 @@
     <ClInclude Include="Box.h" />
     <ClInclude Include="DefaultGeometryShader.h" />
     <ClInclude Include="DXErr.h" />
+    <ClInclude Include="Effects.h" />
     <ClInclude Include="FrameTimer.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GDIPlusManager.h" />
